--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ ul li img{
 
 }
 .div-input{
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   margin: auto;
   width: 30%;
   display: block;
