--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ ul li img{
 #center_logo{
   display: block;
   height: 400px;
-  padding-top: 300px;
+  padding-top: 200px;
 }
 #bell{
   padding: 5px;
@@ -51,17 +51,22 @@ ul li img{
 }
 .div-input{
   border: 1px solid rgba(0, 0, 0, 0.3);
-  margin: auto;
-  width: 30%;
+  margin: 30px auto;
+  max-width: 423px;
+  width: 100%;
   display: block;
-
+  cursor: auto;
 }
+
 .input-search{
   cursor: auto;
   border: none;
   margin: 0;
   width: 75%;
   outline: none;
+  line-height: 20px;
+  font: arial, sans-serif;
+  font-size: 20px;
 }
 #keyboard{
   display: inline-block;
@@ -105,4 +110,22 @@ a:focus {
 
 [aria-label]:hover:after, [aria-label]:focus:after {
 display: block;
+}
+div.button-group{
+  max-width: 250px;
+  width: 100%;
+}
+.button-group{
+  margin: 0 auto;
+  width: 15%;
+  padding: 0 20px;
+  display: block;
+  cursor: auto;
+}
+button{
+  padding: 0 17px;
+  border: none;
+  padding: 5px;
+  background-color: #f5f5f5;
+  font-family: Helvetica, sans-serif;
 }
